fix: replace `overflow: scroll` with `auto` for code

--- a/static/custom.css
+++ b/static/custom.css
@@ -108,7 +108,7 @@ html, body, .gdoc-header {
 
 code {
     font-family: "Source Code Pro", monospace;
-    overflow: scroll;
+    overflow: auto;
 }
 
 /* Make the logo a little bit bigger */
